--- a/es/styles/index.css
+++ b/es/styles/index.css
@@ -53,3 +53,121 @@
     bottom: 0px;
   }
 }
+
+
+
+@keyframes bounce {
+  0% {
+    transform: translateY(0px);
+  }
+  10% {
+    transform: translateY(-9px);
+    background: cornflowerblue;
+  }
+  20% {
+    transform: translateY(0px);
+  }
+}
+.container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.sent .loader{
+  display: none;
+}
+.loader {
+  height: 30px;
+  background: #ccc;
+  border-radius: 15px;
+  width: 60px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  position: relative;
+  transition: 0.2s;
+}
+.loader:hover {
+  transform: scale(1.2);
+}
+.loader::before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: -2px;
+  bottom: -2px;
+  background: #ccc;
+  height: 13.5px;
+  width: 13.5px;
+  border-radius: 50%;
+  z-index: -1;
+}
+.loader::after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: -5.4px;
+  bottom: -5.4px;
+  background: #ccc;
+  height: 7.2px;
+  width: 7.2px;
+  border-radius: 50%;
+}
+.loader span {
+  height: 9px;
+  width: 9px;
+  border-radius: 50%;
+  background: #999;
+  display: block;
+  animation-name: bounce;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+.loader span:nth-child(2) {
+  animation-delay: 50ms;
+}
+.loader span:nth-child(3) {
+  animation-delay: 150ms;
+}
+.fade-enter {
+  opacity: 0.01;
+}
+.fade-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+.fade-exit {
+  opacity: 1;
+}
+.fade-exit-active {
+  opacity: 0.01;
+  transition: opacity 500ms ease-in;
+}
+
+.star {
+  display: inline-block;
+  margin-left: 0.5rem;
+  transform: scale(1.25);
+}
+.star-enter {
+  opacity: 0.01;
+  transform: translateY(-100%) scale(0.75);
+}
+.star-enter-active {
+  opacity: 1;
+  transform: translateY(0%) scale(1.25);
+  transition: all 300ms ease-out;
+}
+.star-exit {
+  opacity: 1;
+  transform: scale(1.25);
+}
+.star-exit-active {
+  opacity: 0;
+  transform: scale(4);
+  transition: all 300ms ease-in;
+}
