--- a/umd/main.css
+++ b/umd/main.css
@@ -70,6 +70,188 @@
     bottom: 0px;
   }
 }
+
+
+
+@-webkit-keyframes bounce {
+  0% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+  10% {
+    -webkit-transform: translateY(-9px);
+            transform: translateY(-9px);
+    background: cornflowerblue;
+  }
+  20% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+
+
+
+@keyframes bounce {
+  0% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+  10% {
+    -webkit-transform: translateY(-9px);
+            transform: translateY(-9px);
+    background: cornflowerblue;
+  }
+  20% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+.container {
+  width: 100%;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.sent .loader{
+  display: none;
+}
+.loader {
+  height: 30px;
+  background: #ccc;
+  border-radius: 15px;
+  width: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+.loader:hover {
+  -webkit-transform: scale(1.2);
+      -ms-transform: scale(1.2);
+          transform: scale(1.2);
+}
+.loader::before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: -2px;
+  bottom: -2px;
+  background: #ccc;
+  height: 13.5px;
+  width: 13.5px;
+  border-radius: 50%;
+  z-index: -1;
+}
+.loader::after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: -5.4px;
+  bottom: -5.4px;
+  background: #ccc;
+  height: 7.2px;
+  width: 7.2px;
+  border-radius: 50%;
+}
+.loader span {
+  height: 9px;
+  width: 9px;
+  border-radius: 50%;
+  background: #999;
+  display: block;
+  -webkit-animation-name: bounce;
+          animation-name: bounce;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease-in-out;
+          animation-timing-function: ease-in-out;
+}
+.loader span:nth-child(2) {
+  -webkit-animation-delay: 50ms;
+          animation-delay: 50ms;
+}
+.loader span:nth-child(3) {
+  -webkit-animation-delay: 150ms;
+          animation-delay: 150ms;
+}
+.fade-enter {
+  opacity: 0.01;
+}
+.fade-enter-active {
+  opacity: 1;
+  -webkit-transition: opacity 500ms ease-in;
+  -o-transition: opacity 500ms ease-in;
+  transition: opacity 500ms ease-in;
+}
+.fade-exit {
+  opacity: 1;
+}
+.fade-exit-active {
+  opacity: 0.01;
+  -webkit-transition: opacity 500ms ease-in;
+  -o-transition: opacity 500ms ease-in;
+  transition: opacity 500ms ease-in;
+}
+
+.star {
+  display: inline-block;
+  margin-left: 0.5rem;
+  -webkit-transform: scale(1.25);
+      -ms-transform: scale(1.25);
+          transform: scale(1.25);
+}
+.star-enter {
+  opacity: 0.01;
+  -webkit-transform: translateY(-100%) scale(0.75);
+      -ms-transform: translateY(-100%) scale(0.75);
+          transform: translateY(-100%) scale(0.75);
+}
+.star-enter-active {
+  opacity: 1;
+  -webkit-transform: translateY(0%) scale(1.25);
+      -ms-transform: translateY(0%) scale(1.25);
+          transform: translateY(0%) scale(1.25);
+  -webkit-transition: all 300ms ease-out;
+  -o-transition: all 300ms ease-out;
+  transition: all 300ms ease-out;
+}
+.star-exit {
+  opacity: 1;
+  -webkit-transform: scale(1.25);
+      -ms-transform: scale(1.25);
+          transform: scale(1.25);
+}
+.star-exit-active {
+  opacity: 0;
+  -webkit-transform: scale(4);
+      -ms-transform: scale(4);
+          transform: scale(4);
+  -webkit-transition: all 300ms ease-in;
+  -o-transition: all 300ms ease-in;
+  transition: all 300ms ease-in;
+}
 .sc-launcher {
   width: 60px;
   height: 60px;
